Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-6518

Meta mismatch error on CAS values during xdcr unidirectional replication while running "make xdcr-merge"

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Blocker
    • 2.0-beta
    • 2.0-beta
    • XDCR
    • Security Level: Public
    • None
    • 2.0 latest code on test_runner, Sept 4.

      cluster_run

    Description

      From Damien,

      I am getting this failure on my machine with the latest:

      [2012-08-31 17:11:51,264] - [task:687] ERROR - Source (Seqno: 4, CAS: 86446920460, Exp: 1346458227, Flag: 0)
      [2012-08-31 17:11:51,264] - [task:689] ERROR - Dest (Seqno: 4, CAS: 96672664613, Exp: 0, Flag: 0)
      [2012-08-31 17:11:51,270] - [task:684] ERROR - Mismatch on CAS for key loadOne2465 Source CAS:85827314406 Destination CAS:96687675259 Error Count211
      [2012-08-31 17:11:51,271] - [task:687] ERROR - Source (Seqno: 4, CAS: 85827314406, Exp: 1346458227, Flag: 0)
      [2012-08-31 17:11:51,271] - [task:689] ERROR - Dest (Seqno: 4, CAS: 96687675259, Exp: 0, Flag: 0)
      [2012-08-31 17:11:51,299] - [task:684] ERROR - Mismatch on CAS for key loadOne2031 Source CAS:84739652344 Destination CAS:96648333611 Error Count212
      [2012-08-31 17:11:51,299] - [task:687] ERROR - Source (Seqno: 4, CAS: 84739652344, Exp: 1346458226, Flag: 0)
      [2012-08-31 17:11:51,299] - [task:689] ERROR - Dest (Seqno: 4, CAS: 96648333611, Exp: 0, Flag: 0)
      [2012-08-31 17:11:51,303] - [task:625] INFO - Verification done, 10000 items have been verified (deleted items: 6000)
      FAIL

      ======================================================================
      FAIL: load_with_ops (xdcr.uniXDCR.unidirectional)
      ----------------------------------------------------------------------
      Traceback (most recent call last):
      File "pytests/xdcr/uniXDCR.py", line 41, in load_with_ops
      self.verify_results()
      File "pytests/xdcr/xdcrbasetests.py", line 488, in verify_results
      self.verify_xdcr_stats(self.src_nodes, self.dest_nodes, verify_src)
      File "pytests/xdcr/xdcrbasetests.py", line 477, in verify_xdcr_stats
      self.fail("Mismatches on Meta Information on xdcr-replicated items!")
      AssertionError: Mismatches on Meta Information on xdcr-replicated items!

      ----------------------------------------------------------------------

      Ketaki, do you see this error? Junyi, do you?

      I don't know as much about the test as I'd like. Does the test do both updates and inserts on the source? I'm wondering if we have a bug where we don't properly preserve CAS and expiration, or maybe it's simply not being updated.

      -Damien

      Attachments

        For Gerrit Dashboard: MB-6518
        # Subject Branch Project Status CR V

        Activity

          People

            ketaki Ketaki Gangal (Inactive)
            ketaki Ketaki Gangal (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty