src/ep.hh
@@ -794,7 +794,8 @@ private:
     int flushOneDelOrSet(const queued_item &qi, std::queue<queued_item> *rejectQueue);
 
     StoredValue *fetchValidValue(RCPtr<VBucket> &vb, const std::string &key,
-                                 int bucket_num, bool wantsDeleted=false, bool trackReference=true);
+                                 int bucket_num, bool wantsDeleted=false,
+                                 bool trackReference=true, bool queueExpired=true);
 
     size_t getWriteQueueSize(void);
 
